--- a/index.html
+++ b/index.html
@@ -48,16 +48,6 @@
     At tenetur unde quam delectus cumque hic optio quis perferendis dolore, ullam magni. Pariatur totam perspiciatis error. Fugit sed voluptatibus distinctio ducimus expedita libero vel repellat, ea deserunt impedit deleniti.
     Facilis hic corrupti distinctio porro, quo consequatur eius aspernatur beatae pariatur sunt ipsam harum corporis repellendus facere praesentium reprehenderit, eligendi sequi sit possimus in esse temporibus? Cum ea ut voluptates.
     Perferendis, optio. Laboriosam a distinctio sit nemo quisquam vel. Facilis dolorem architecto accusamus vero earum nobis vitae incidunt alias corrupti! Quaerat nulla nisi dolorem adipisci doloribus corporis provident beatae dolor.
-    Cum assumenda quibusdam deleniti perspiciatis rerum dolore dignissimos porro facere quasi optio! Reprehenderit quis quo aut corporis alias sint quaerat mollitia a eaque maiores dolorem, totam, voluptatum atque, suscipit repellat.
-    Totam tempore sequi vitae provident, aperiam inventore quisquam omnis officiis praesentium. Reiciendis dolor cumque consequatur aut! Ullam itaque similique sapiente obcaecati, cum nulla veritatis error quod ut culpa facere dolorum?
-    Illo recusandae officiis suscipit earum distinctio iusto praesentium harum, reiciendis nostrum veniam eveniet quasi expedita tempore quae accusamus vel animi quis quas! Assumenda suscipit necessitatibus eaque reprehenderit labore, voluptatibus exercitationem.
-    Tempore necessitatibus iste doloremque ut eaque nam! Laborum, iste. Doloremque, deserunt nam. Est, magnam excepturi odio ratione quis veritatis accusamus hic dicta tempora animi culpa assumenda ut voluptate sed quas!
-    Perspiciatis, libero delectus accusamus sed excepturi quis, laboriosam esse aut ea placeat eum possimus, laudantium nesciunt eos sunt? Explicabo quas exercitationem ducimus totam consectetur fuga unde atque ex ad numquam?
-    Labore quam nihil voluptatibus eius ducimus cum dolore dolor delectus neque magnam accusantium vitae voluptates rem, eos quia a consequatur earum eaque numquam reiciendis accusamus dolores beatae! Suscipit, excepturi repellendus!
-    Deleniti in praesentium sequi ullam delectus libero, ex voluptas ab laudantium aliquid quia veniam, quod, esse sed? Perspiciatis, minus voluptatibus alias nesciunt, labore harum quasi debitis laudantium culpa obcaecati porro!
-    Corrupti, pariatur? Rem officia harum esse deleniti corporis libero porro reprehenderit natus? Optio dolorem eos fuga alias nesciunt, minima nihil velit facilis quae doloremque architecto fugit corporis neque accusamus dolores.
-    Natus ratione sit voluptatum consectetur dicta, beatae laborum debitis dolorum optio sint! Unde repellendus doloremque, commodi amet itaque architecto, quidem ipsam ipsa, minima recusandae distinctio dolores deleniti dignissimos labore quos?
-    Quidem libero dolorem debitis excepturi quisquam ratione iste. Maxime, fugiat! Fugiat cum corrupti nulla quas quaerat modi perferendis, animi provident, ab ipsam itaque blanditiis, illo assumenda quisquam aspernatur impedit laudantium?
-    Harum, officiis illum deserunt rem reiciendis ipsum officia blanditiis voluptatibus quae voluptatum ratione nobis et, minima, tempora quas distinctio aliquid quibusdam eius voluptates! Debitis, labore? Nihil sequi neque delectus quisquam.</p>
+    Cum assumenda quibusdam deleniti perspiciatis rerum dolore dignissimos porro facere quasi optio! Reprehenderit quis quo aut corporis alias sint quaerat mollitia a eaque maiores dolorem, totam, voluptatum atque, suscipit repellat.</p>
 </body>
 </html>
